Fixed Header alignment

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -18,7 +18,8 @@
 
 .header__container {
   display: flex;
-  margin: 8px 0 0 auto;
+  align-items: center;
+  margin: 0 0 0 auto;
   gap: 20px;
 }
 
@@ -32,6 +33,7 @@
 }
 
 .header__username {
+  padding: 0;
   margin: 0;
 }
 
